--- a/src/collector/CMakeLists.txt
+++ b/src/collector/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(mastermind-collector
     FS.cpp FilterParser.cpp Backend.cpp
     Filter.cpp Round.cpp Collector.cpp Job.cpp main.cpp
     GroupHistoryEntry.cpp
+    Inventory.cpp
     )
 
 target_link_libraries(mastermind-collector
