--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,8 +39,8 @@ set(COLLECTOR_LIBRARIES
 
 add_subdirectory(src/collector)
 
-# enable_testing()
-# add_subdirectory(tests/collector)
+enable_testing()
+add_subdirectory(tests/collector)
 
 install(FILES ${CMAKE_BINARY_DIR}/src/collector/mastermind-collector.tar.gz
     src/collector/mastermind-collector.manifest
