--- a/tests/collector/CMakeLists.txt
+++ b/tests/collector/CMakeLists.txt
@@ -31,3 +31,4 @@ add_subdirectory(config_parser)
 add_subdirectory(filter_parser)
 add_subdirectory(stats_parser)
 add_subdirectory(group)
+add_subdirectory(couple)
