Intercept clock_get_real() in tests

--- a/tests/collector/util/CMakeLists.txt
+++ b/tests/collector/util/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(util STATIC
     app.cpp
+    Clock.cpp
     )
 
-target_link_libraries(util ${COLLECTOR_LIBRARIES})
+target_link_libraries(util collector_common)
