Describe test storage layout using JSON

--- a/tests/collector/util/CMakeLists.txt
+++ b/tests/collector/util/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(util STATIC
     app.cpp
     Clock.cpp
+    StorageSnapshot.cpp
+    StorageUpdater.cpp
     )
 
 target_link_libraries(util collector_common)
