--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tests/collector/googletest"]
 	path = tests/collector/googletest
-	url = https://github.com/google/googletest
+	url = git://github.com/google/googletest.git
