--- a/tests/collector/CMakeLists.txt
+++ b/tests/collector/CMakeLists.txt
@@ -34,3 +34,4 @@ add_subdirectory(group)
 add_subdirectory(couple)
 add_subdirectory(backend)
 add_subdirectory(filesystem)
+add_subdirectory(history)
