Group select test

--- a/tests/collector/CMakeLists.txt
+++ b/tests/collector/CMakeLists.txt
@@ -35,3 +35,4 @@ add_subdirectory(couple)
 add_subdirectory(backend)
 add_subdirectory(filesystem)
 add_subdirectory(history)
+add_subdirectory(select)
