Enable tests on Backend and FS

--- a/tests/collector/CMakeLists.txt
+++ b/tests/collector/CMakeLists.txt
@@ -32,3 +32,5 @@ add_subdirectory(filter_parser)
 add_subdirectory(stats_parser)
 add_subdirectory(group)
 add_subdirectory(couple)
+add_subdirectory(backend)
+add_subdirectory(filesystem)
