Move to blackhole v1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 2.8.8)
 project(mastermind)
 
 add_definitions("-D_GNU_SOURCE -std=c++0x -Wall -O2 -g")
@@ -16,6 +16,7 @@ find_package(CURL REQUIRED)
 include(cmake/locate_library.cmake)
 locate_library(MSGPACK "msgpack.hpp" "msgpack")
 locate_library(MONGOCLIENT "mongo/version.h" "mongoclient")
+locate_library(BLACKHOLE "blackhole/logger.hpp" "blackhole")
 
 include_directories(${elliptics_INCLUDE_DIRS} ${CocaineNative_INCLUDE_DIRS}
     ${RAPIDJSON_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS})
@@ -26,6 +27,7 @@ set(COLLECTOR_LIBRARIES
     ${CocaineNative_LIBRARIES}
     ${Cocaine_LIBRARY}
     ${CURL_LIBRARIES}
+    ${BLACKHOLE_LIBRARIES}
     boost_system
     boost_thread
     msgpack
