--- a/src/collector/CMakeLists.txt
+++ b/src/collector/CMakeLists.txt
@@ -14,6 +14,7 @@ set(COLLECTOR_SOURCES_COMMON
     Host.cpp
     Inventory.cpp
     Job.cpp
+    Logger.cpp
     Metrics.cpp
     Namespace.cpp
     Node.cpp
