Fixes for review. To be merged

--- a/examples/mastermind.conf
+++ b/examples/mastermind.conf
@@ -182,6 +182,7 @@
             "aggregation_table": "",
             "tskv_log_table": "",
             "ttl_cleanup_period": 9000,
+            "yt_cleanup_period": 84400,
             "yt_cluster": "",
             "yt_token": "",
             "yt_attempts": 5,
