--- a/examples/mastermind.conf
+++ b/examples/mastermind.conf
@@ -225,6 +225,38 @@
         }
     },
 
+    "scheduler": {
+        "enabled": true,
+        "recover_dc": {
+            "enabled": true,
+            "recover_dc_period": 900,
+            "max_executing_jobs": 10,
+            "autoapprove": true,
+            "keys_cf": 86400,
+            "timestamp_cf": 1
+        },
+
+        "couple_defrag": {
+            "enabled": true,
+            "couple_defrag_period": 900,
+            "max_executing_jobs": 10,
+            "autoapprove": true,
+            "min_remove_size": 1000
+        },
+
+        "ttl_cleanup": {
+            "enabled": true,
+            "aggregation_table": "",
+            "tskv_log_table": "",
+            "ttl_cleanup_period": 9000,
+            "yt_cluster": "",
+            "yt_token": "",
+            "yt_attempts": 5,
+            "yt_delay": 900,
+            "autoapprove": true,
+            "ttl_threshold": 1000
+        },
+
     "jobs": {
         "enabled": true,
         "update_period": 50,
