--- a/examples/mastermind.conf
+++ b/examples/mastermind.conf
@@ -259,6 +259,15 @@
             "max_idle_days": 21
         },
 
+        "move": {
+            "enabled": true,
+            "move_period": 36000,
+            "autoapprove": false,
+            "uncoupled_space_max_bytes": 0,
+            "uncoupled_diff_sensitive_percent": 1,
+            "uncoupled_space_min_bytes": 10000000000
+        },
+
     "jobs": {
         "enabled": true,
         "update_period": 50,
